Improved the build.xml file, it now contains targets for compilation as well as building.